--- a/package.json
+++ b/package.json
@@ -8,31 +8,40 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@form-create/ant-design-vue": "^1.0.18",
+    "ant-design-vue": "^1.6.4",
+    "axios": "^0.19.2",
+    "caniuse-lite": "^1.0.30001248",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "crypto-js": "^4.0.0",
+    "echarts": "^4.9.0",
+    "element-ui": "^2.13.2",
+    "jsencrypt": "^3.0.0-rc.1",
+    "jsplumb": "^2.14.6",
+    "screenfull": "^5.0.2",
+    "vue": "^2.6.11",
+    "vue-cookies": "^1.7.3",
+    "vue-router": "^3.2.0",
+    "vue-ueditor-wrap": "^2.5.6",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "less-loader": "^6.2.0",
     "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
   },
   "browserslist": [
     "> 1%",
